bin/testsuite/tests/compiler/src/errors/compiler5005.swg
#global testerror "Err0543"

func toto() => "coucou"
const A = #include(toto())
